# hirefire-resource-python

./: .gitignore  Brewfile  Brewfile.lock.json  CHANGELOG.md  LICENSE  README.md  pavement.py  pyproject.toml  pytest.ini  tox.ini
.github/: dependabot.yml
.github/workflows/: main.yml
docs/: conf.py  hirefire_resource.rst  index.rst
hirefire_resource/: __init__.py  configuration.py  errors.py  hirefire.py  resource.py  version.py  web.py  web_dispatcher.py  worker.py
hirefire_resource/macro/: celery.py  rq.py
hirefire_resource/middleware/: __init__.py  django.py  flask.py
hirefire_resource/middleware/asgi/: __init__.py  django.py  flask.py  quart.py  starlette.py
hirefire_resource/middleware/wsgi/: __init__.py  django.py  flask.py
tests/: conftest.py  helpers.py  settings.py
tests/hirefire_resource/: test_configuration.py  test_hirefire.py  test_middleware.py  test_resource.py  test_util.py  test_version.py  test_web.py  test_web_dispatcher.py  test_worker.py  test_worker_dispatcher.py  test_worker_dispatchers.py  test_worker_server.py  test_worker_servers.py
tests/hirefire_resource/macro/: test_celery.py  test_rq.py
tests/hirefire_resource/middleware/: test_asgi.py  test_asgi_django.py  test_asgi_fast_api.py  test_asgi_quart.py  test_asgi_starlette.py  test_django.py  test_flask.py  test_wsgi.py  test_wsgi_django.py  test_wsgi_flask.py
tests/hirefire_resource/middleware/asgi/: test_flask.py
tests/hirefire_resource/middleware/wsgi/: test_django.py  test_flask.py
