[tool.poetry]
name = "hirefire-resource"
version = "0.0.1"
description = "Advanced Heroku Dyno Autoscaling"
authors = ["Michael R. van Rooijen <support@hirefire.io>"]
license = "MIT"
repository = "https://github.com/hirefire/hirefire-resource-python"
readme = "README.md"
homepage = "https://hirefire.io"
keywords = ["hirefire", "heroku", "autoscale", "middleware", "web", "worker", "dyno"]
packages = [{include = "hirefire_resource"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

[tool.poetry.dependencies]
python = ">=3.8, <3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
freezegun = "^1.2.2"
httpretty = "^1.1.4"
pytest-mock = "^3.12.0"
black = "^23.3.0"
paver = "^1.3.4"
coverage = "^7.2.3"
isort = "^5.12.0"
autoflake = "^2.1.1"
pytest-django = "^4.5.2"
django = "^4.2.6"
flask = "^3.0.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
